# libavim

./: CMakeLists.txt  README.md
include/: avif.hpp  avim.hpp  avjackif.hpp  avproto.hpp  message.hpp
include/avproto/: avjackif.hpp  avkernel.hpp  easyssl.hpp  interface.hpp  message.hpp
src/: async_coro_queue.hpp  avif.cpp  avim.cpp  avjackif.cpp  avkernel.cpp  easyssl.cpp  interface.cpp  message.cpp  root_ca.cpp
wrapper/: CMakeLists.txt  avproto.h  cstub.cpp
